--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Lisa by mjirik</title>
+    <meta name="description" content="Lisa : Coputer-assisted liver surgery. ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Lisa</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Lisa</h1>
-        <p class="header">Coputer-assisted liver surgery. </p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/mjirik/lisa/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/mjirik/lisa/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/mjirik/lisa">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/mjirik/lisa">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/mjirik">mjirik</a></p>
+          <h1 id="project_title">Lisa</h1>
+          <h2 id="project_tagline">Coputer-assisted liver surgery. </h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/mjirik/lisa/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/mjirik/lisa/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="lisa-" class="anchor" href="#lisa-"><span class="octicon octicon-link"></span></a>LISA </h1>
 
@@ -111,11 +112,27 @@ remaining volume is then calculated.</p>
 
 <p><a href="https://www.youtube.com/watch?v=O408OKV5LhQ"><img src="https://img.youtube.com/vi/O408OKV5LhQ/0.jpg" alt="Video webcam tracking"></a></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Lisa maintained by <a href="https://github.com/mjirik">mjirik</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-56187890-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
   </body>
 </html>
